<resources>
    <string name="app_name">Quiz App</string>

    <string name="input_name">Enter your full name: </string>

    <string name="full_name"></string>

    <string name="name_hint">enter your full name here</string>

    <string name="enter_button">Enter</string>

    <string name="show_time">Seconds remaining: </string>

    <string name="hint"></string>

    <string name="question1">1. What is Deoxyribonucleic acid commonly referred to as?</string>
    <string name="question1RadioButton1">RNA</string>
    <string name="question1RadioButton2">CIA</string>
    <string name="question1RadioButton3">DNA</string>

    <string name="question2">2. What process involves treating rubber with sulfur to harden it?</string>

    <string name="question3">3. Name two different organelles of a eukaryotic cell.</string>
    <string name="question3CheckBox1">Ribosome</string>
    <string name="question3CheckBox2">Plasmids</string>
    <string name="question3CheckBox3">Golgi apparatus</string>
    <string name="question3CheckBox4">Diploid</string>

    <string name="question4">4. This word describes the force that pulls objects to the middle of the earth?</string>

    <string name="question5">5. What type of trees yield the resin used to produce turpentine?</string>
    <string name="question5RadioButton1">Palm trees</string>
    <string name="question5RadioButton2">Pine trees</string>
    <string name="question5RadioButton3">Oak trees</string>

    <string name="question6">6. Cumulus and Cirrus are types of what?</string>

    <string name="question7">7. Which two planets have one or more moons?</string>
    <string name="question7CheckBox1">Ceres</string>
    <string name="question7CheckBox2">Mercury</string>
    <string name="question7CheckBox3">Earth</string>
    <string name="question7CheckBox4">Pluto</string>

    <string name="question8">8. Where in the human body would you find the scaphoid bone?</string>

    <string name="question9">9. Which grow upwards Stalactites or Stalagmites?</string>
    <string name="question9RadioButton1">Stalactites</string>
    <string name="question9RadioButton2">Stalagmites</string>

    <string name="question10">10. What process involves heating an ore to obtain a metal?</string>

    <string name="submitButton">Submit</string>
</resources>