<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_name" />

            <EditText
                android:id="@+id/inputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_hint"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/enterButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_button" />

            <TextView
                android:id="@+id/showName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_name" />

            <TextView
                android:id="@+id/showTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_time" />

            <TextView
                android:id="@+id/q1TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question1" />

            <RadioGroup
                android:id="@+id/question1RadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/question1RadioButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question1RadioButton1" />

                <RadioButton
                    android:id="@+id/question1RadioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question1RadioButton2" />

                <RadioButton
                    android:id="@+id/question1RadioButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question1RadioButton3" />
            </RadioGroup>

            <TextView
                android:id="@+id/question2TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question2" />

            <EditText
                android:id="@+id/question2TextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint"
                android:importantForAutofill="no"
                android:inputType="text" />

            <TextView
                android:id="@+id/question3TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question3" />

            <CheckBox
                android:id="@+id/question3CheckBox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question3CheckBox1" />

            <CheckBox
                android:id="@+id/question3CheckBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question3CheckBox2" />

            <CheckBox
                android:id="@+id/question3CheckBox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question3CheckBox3" />

            <CheckBox
                android:id="@+id/question3CheckBox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question3CheckBox4" />

            <TextView
                android:id="@+id/question4TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question4" />

            <EditText
                android:id="@+id/question4TextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint"
                android:importantForAutofill="no"
                android:inputType="text" />

            <TextView
                android:id="@+id/question5TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question5" />

            <RadioGroup
                android:id="@+id/question5RadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/question5RadioButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question5RadioButton1" />

                <RadioButton
                    android:id="@+id/question5RadioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question5RadioButton2" />

                <RadioButton
                    android:id="@+id/question5RadioButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question5RadioButton3" />
            </RadioGroup>

            <TextView
                android:id="@+id/question6TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question6" />

            <EditText
                android:id="@+id/question6TextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint"
                android:importantForAutofill="no"
                android:inputType="text" />

            <TextView
                android:id="@+id/question7TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question7" />

            <CheckBox
                android:id="@+id/question7CheckBox1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question7CheckBox1" />

            <CheckBox
                android:id="@+id/question7CheckBox2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question7CheckBox2" />

            <CheckBox
                android:id="@+id/question7CheckBox3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question7CheckBox3" />

            <CheckBox
                android:id="@+id/question7CheckBox4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question7CheckBox4" />

            <TextView
                android:id="@+id/question8TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question8" />

            <EditText
                android:id="@+id/question8TextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint"
                android:importantForAutofill="no"
                android:inputType="text" />

            <TextView
                android:id="@+id/question9TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question9" />

            <RadioGroup
                android:id="@+id/question9RadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/question9RadioButton1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question9RadioButton1" />

                <RadioButton
                    android:id="@+id/question9RadioButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question9RadioButton2" />
            </RadioGroup>

            <TextView
                android:id="@+id/question10TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question10" />

            <EditText
                android:id="@+id/question10TextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint"
                android:importantForAutofill="no"
                android:inputType="text" />

            <Button
                android:id="@+id/submitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submitButton" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>